make green in IntelliJ